GNOME Bugzilla – Bug 746784
GtkBooleanCellAccessible emits state-changed:checked signals instead of state-changed:sensitive
Last modified: 2015-03-26 12:26:22 UTC
Created attachment 300322 [details] [review] proposed patch Copy-and-paste error presumably.... Patch attached.
Review of attachment 300322 [details] [review]: looks good
Comment on attachment 300322 [details] [review] proposed patch Thanks! https://git.gnome.org/browse/gtk+/commit/?id=9749013e